my second comment

--- a/exam.html
+++ b/exam.html
@@ -13,7 +13,7 @@
 		<input id="firstNum" type"firstNum">
 	<input id="secondNum" type"secondNum">
 
-	<button id = " Add" type="button" onclick="myFunction()">add</button>
+	<button id = " Add" type="button" onclick="myFunction()">add this</button>
 	
 
 
@@ -22,7 +22,7 @@
 	var secondNum=0;
 	var total = firstNum + secondNum;
 	
-		function myFunction() {
+   function myFunction() {
     return firstNum + secondNum;
 }
 	
